Clean up, added svg icons

--- a/app/index.html
+++ b/app/index.html
@@ -31,18 +31,47 @@
     <section class="wrapper">
       <figure class="about">
         <div class="picture">
-          <img src="images/profile.jpg" alt="">
+          <img src="images/profile.jpg" alt="Profile picture">
         </div>
         <figcaption class="description">
           <h1>João</h1>
-          <h2>Developer &amp; Lead Designer at <a href="http://sumup.com">SumUp</a></h2>
-          <small>Based in Berlin</small>
+          <h2>Developer &amp; Lead Designer at <a href="http://sumup.com" title="SumUp, Berlin">SumUp</a></h2>
           <ul class="social">
-            <li class="instagram"><a href="#">I</a></li>
-            <li class="twitter"><a href="#">T</a></li>
-            <li class="dribbble"><a href="#">D</a></li>
-            <li class="github"><a href="#">G</a></li>
-            <li class="linkedin"><a href="#">L</a></li>
+            <li class="instagram">
+              <a href="http://instagram.com/joaoramospt" title="Pictures on Instagram" target="_blank">
+                <svg viewBox="0 0 32 32">
+                   <use xlink:href="images/symbol/svg/sprite.symbol.svg#instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="twitter">
+              <a href="http://twitter.com/joaotiago" title="Updates on Twitter" target="_blank">
+                <svg viewBox="0 0 32 32">
+                   <use xlink:href="images/symbol/svg/sprite.symbol.svg#twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="dribbble">
+              <a href="http://dribbble.com/joaotiago" title="Dribbble shots" target="_blank">
+                <svg viewBox="0 0 32 32">
+                   <use xlink:href="images/symbol/svg/sprite.symbol.svg#dribbble"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="github">
+              <a href="http://github.com/joaoramos" title="Code on GitHub" target="_blank">
+                <svg viewBox="0 0 32 32">
+                   <use xlink:href="images/symbol/svg/sprite.symbol.svg#github"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="linkedin">
+              <a href="http://linkedin.com/in/johnzramos" title="My resumé" target="_blank">
+                <svg viewBox="0 0 32 32">
+                   <use xlink:href="images/symbol/svg/sprite.symbol.svg#linkedin"></use>
+                </svg>
+              </a>
+            </li>
           </ul>
         </figcaption>
       </figure>
