--- a/app/index.html
+++ b/app/index.html
@@ -2,10 +2,24 @@
 <html class="no-js" lang="">
   <head>
     <meta charset="utf-8">
+    <title>João, Developer &amp; Designer</title>
     <meta name="description" content="Developer &amp; Lead Designer at SumUp">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>João — developer &amp; designer</title>
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
+
+    <!-- Twitter Card data -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:site" content="@joaotiago" />
+    <meta name="twitter:title" content="Joao.pt" />
+    <meta name="twitter:description" content="João, Developer &amp; Designer" />
+    <meta name="twitter:image" content="http://joao.pt/images/profile.jpg" />
+    <meta name="twitter:url" content="http://joao.pt" />
+
+    <!-- Open Graph data -->
+    <meta property="og:title" content="Joao.pt" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="http://joao.pt/" />
+    <meta property="og:image" content="http://joao.pt/images/profile.jpg" />
+    <meta property="og:description" content="João, Developer &amp; Designer" />
 
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
@@ -29,46 +43,46 @@
     <![endif]-->
     
     <section class="wrapper">
-      <figure class="about">
+      <figure class="about" itemscope itemtype="http://data-vocabulary.org/Person">
         <div class="picture">
-          <img src="images/profile.jpg" alt="Profile picture">
+          <img src="images/profile.jpg" alt="Profile picture" itemprop="photo">
         </div>
         <figcaption class="description">
-          <h1>João</h1>
-          <h2>Developer &amp; Lead Designer at <a href="http://sumup.com" title="SumUp, Berlin">SumUp</a></h2>
+          <h1 itemprop="name">João</h1>
+          <h2 itemprop="title">Developer &amp; Lead Designer at <a href="http://sumup.com" title="SumUp, Berlin" itemprop="affiliation">SumUp</a></h2>
           <ul class="social">
             <li class="instagram">
               <a href="http://instagram.com/joaoramospt" title="Pictures on Instagram" target="_blank">
                 <svg viewBox="0 0 32 32">
-                   <use xlink:href="images/symbol/svg/sprite.symbol.svg#instagram"></use>
+                  <use xlink:href="images/symbol/svg/sprite.symbol.svg#instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="twitter">
               <a href="http://twitter.com/joaotiago" title="Updates on Twitter" target="_blank">
                 <svg viewBox="0 0 32 32">
-                   <use xlink:href="images/symbol/svg/sprite.symbol.svg#twitter"></use>
+                  <use xlink:href="images/symbol/svg/sprite.symbol.svg#twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="dribbble">
               <a href="http://dribbble.com/joaotiago" title="Dribbble shots" target="_blank">
                 <svg viewBox="0 0 32 32">
-                   <use xlink:href="images/symbol/svg/sprite.symbol.svg#dribbble"></use>
+                  <use xlink:href="images/symbol/svg/sprite.symbol.svg#dribbble"></use>
                 </svg>
               </a>
             </li>
             <li class="github">
               <a href="http://github.com/joaoramos" title="Code on GitHub" target="_blank">
                 <svg viewBox="0 0 32 32">
-                   <use xlink:href="images/symbol/svg/sprite.symbol.svg#github"></use>
+                  <use xlink:href="images/symbol/svg/sprite.symbol.svg#github"></use>
                 </svg>
               </a>
             </li>
             <li class="linkedin">
               <a href="http://linkedin.com/in/johnzramos" title="My resumé" target="_blank">
                 <svg viewBox="0 0 32 32">
-                   <use xlink:href="images/symbol/svg/sprite.symbol.svg#linkedin"></use>
+                  <use xlink:href="images/symbol/svg/sprite.symbol.svg#linkedin"></use>
                 </svg>
               </a>
             </li>
