Updated favicon and meta tags

--- a/app/index.html
+++ b/app/index.html
@@ -2,15 +2,16 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8">
-    <title>João — Developer &amp; Designer based in Berlin</title>
-    <meta name="description" content="Developer &amp; Lead Designer at SumUp">
+    <title>João, Front-end Developer &amp; Designer based in Berlin</title>
+    <meta name="description" content="Front-end &amp; Lead Designer at SumUp">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" type="image/png" href="favicon.png">
 
     <!-- Twitter Card data -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@joaotiago" />
     <meta name="twitter:title" content="Joao.pt" />
-    <meta name="twitter:description" content="João — Developer &amp; Designer based in Berlin" />
+    <meta name="twitter:description" content="João, Front-end Developer &amp; Designer based in Berlin" />
     <meta name="twitter:image" content="http://joao.pt/images/profile.jpg" />
     <meta name="twitter:url" content="http://joao.pt" />
 
@@ -19,7 +20,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://joao.pt/" />
     <meta property="og:image" content="http://joao.pt/images/profile.jpg" />
-    <meta property="og:description" content="João — Developer &amp; Designer based in Berlin" />
+    <meta property="og:description" content="João, Front-end Developer &amp; Designer based in Berlin" />
 
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
@@ -48,7 +49,7 @@
         </div>
         <figcaption class="description">
           <h1 itemprop="name" data-sr="wait .1s and enter bottom">João</h1>
-          <h2 itemprop="title" data-sr="enter bottom">Developer &amp; Lead Designer at <a href="http://sumup.com" title="SumUp, Berlin" itemprop="affiliation" target="_blank">SumUp</a></h2>
+          <h2 itemprop="title" data-sr="enter bottom">Front-end &amp; Lead Designer at <a href="http://sumup.com" title="SumUp, Berlin" itemprop="affiliation" target="_blank">SumUp</a></h2>
           <ul class="social">
             <li class="instagram" data-sr="wait .5s enter bottom">
               <a href="http://instagram.com/joaoramospt" rel="me" title="Pictures on Instagram" target="_blank">
