--- a/index.html
+++ b/index.html
@@ -25,8 +25,11 @@
     <meta property="og:image" content="http://joao.pt/images/profile.jpg" />
     <meta property="og:description" content="João, Product designer based in Berlin" />
 
-    <script type="text/javascript" src="//use.typekit.net/gbr1dyi.js"></script>
-    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
+    <!-- Mobile boob job -->
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+    <meta name="apple-mobile-web-app-title" content="Joao.pt">
+    <meta name="mobile-web-app-capable" content="yes">
   </head>
   <body>
 
@@ -84,6 +87,9 @@
         </figcaption>
       </figure>
     </section>
+
+    <script type="text/javascript" src="//use.typekit.net/gbr1dyi.js"></script>
+    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
 
     <script>
       (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
