First stab at the layout redesign

--- a/index.html
+++ b/index.html
@@ -2,15 +2,20 @@
 <html class="no-js" lang="en">
   <head>
     <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
     <title>João, Product designer based in Berlin</title>
     <meta name="description" content="Product designer at Contentful">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-site-verification" content="2shu_KfJ0xhCJ4fWUc_Qqf7iPCXsiRnuEYhLqgjzZq8" />
 
     <link rel="icon" type="image/png" href="favicon.png">
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-    <!-- Twitter Card data -->
+    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/front.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Asap:400i,700i|Noticia+Text:400,700,700i|Oswald:300">
+
+    <!-- Twitter -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@joaotiago" />
     <meta name="twitter:title" content="Joao.pt" />
@@ -18,78 +23,70 @@
     <meta name="twitter:image" content="http://joao.pt/images/profile.jpg" />
     <meta name="twitter:url" content="http://joao.pt" />
 
-    <!-- Open Graph data -->
+    <!-- Open Graph -->
     <meta property="og:title" content="Joao.pt" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://joao.pt/" />
     <meta property="og:image" content="http://joao.pt/images/profile.jpg" />
     <meta property="og:description" content="João, Product designer based in Berlin" />
 
-    <!-- Mobile boob job -->
+    <!-- Mobile -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
     <meta name="apple-mobile-web-app-title" content="Joao.pt">
     <meta name="mobile-web-app-capable" content="yes">
 
-    <script type="text/javascript" src="//use.typekit.net/gbr1dyi.js"></script>
-    <script type="text/javascript">try{Typekit.load();}catch(e){}</script>
   </head>
   <body>
 
-    <!--[if lt IE 10]>
+    <!--[if lt IE 8]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <section class="vcard wrapper" id="hcard-João-Ramos">
-      <figure class="about fn n" itemscope itemtype="http://data-vocabulary.org/Person">
-        <div class="picture">
+    <main>
+
+      <header class="top vcard wrapper" id="hcard-João-Ramos">
+        <nav>
+          <a href="#" itemprop="name" class="given-name">João Ramos</a>
+          <ul role="nav">
+            <li>Projects</li>
+            <li>Library</li>
+            <li>Contact</li>
+          </ul>
+        </nav>
+        <div class="about fn n" itemscope itemtype="http://data-vocabulary.org/Person">
+          <h1 itemprop="title" class="title"><span class="role">Product and web designer</span> who makes tasks easier for people, through empathy and thoughtful design</h1>
           <img src="http://joao.pt/images/profile.jpg" alt="Photo of João Ramos" itemprop="photo" class="photo" />
         </div>
-        <figcaption class="description">
-          <span>
-            <h1 itemprop="name" class="given-name">João Ramos</h1>
-          </span>
-          <h2 itemprop="title"><span class="role">Product designer</span> at <a href="http://contentful.com" title="Contentful, Berlin" itemprop="affiliation" class="org" target="_blank">Contentful</a></h2>
-          <ul class="social">
-            <li class="instagram">
-              <a href="http://instagram.com/joaoramospt" rel="me" title="Pictures on Instagram" target="_blank">
-                <svg viewBox="0 0 32 32">
-                  <use xlink:href="images/sprite.svg#instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="twitter">
-              <a href="http://twitter.com/joaotiago" rel="me" title="Updates on Twitter" target="_blank">
-                <svg viewBox="0 0 32 32">
-                  <use xlink:href="images/sprite.svg#twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="dribbble">
-              <a href="http://dribbble.com/joaotiago" rel="me" title="Dribbble shots" target="_blank">
-                <svg viewBox="0 0 32 32">
-                  <use xlink:href="images/sprite.svg#dribbble"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="github">
-              <a href="http://github.com/joaoramos" rel="me" title="Code on GitHub" target="_blank">
-                <svg viewBox="0 0 32 32">
-                  <use xlink:href="images/sprite.svg#github"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="linkedin">
-              <a href="http://linkedin.com/in/johnzramos" rel="me" title="My resumé" target="_blank">
-                <svg viewBox="0 0 32 32">
-                  <use xlink:href="images/sprite.svg#linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
-        </figcaption>
-      </figure>
-    </section>
+      </header>
+
+      <section class="bio wrapper">
+        <p>I’ve been designing and coding web <em>sites</em> and <em>apps</em> for the past seven years, for start-ups with either self-service or enterprise products. It has been a blast! I’m now doing product design for the authoring experience at Contentful. I’m still learning every single day.</p>
+      </section>
+
+      <section class="practice wrapper">
+        <h2>Digital product design as an hollistic practice</h2>
+        <h3>My take on product design and how I conduct my work</h3>
+        <p>I believe thoughtful product design addresses people, context, and problem as a whole, not as isolated elements. I usually take them in by leveraging user research and data insights early on when kicking off a project.</p>
+        <p>Most of my time is spent asking questions, scribbling diagrams and wireframes, drawing testicles on post-its; often also co-designing and co-programming with other designers and enginners.</p>
+      </section>
+
+      <section class="experience">
+        <div class="currently wrapper">
+          <small>Currently</small>
+          <p>Contentful, Berlin</p>
+          <p>Product designer</p>
+        </div>
+        <div class="before wrapper">
+          <small>Before</small>
+          <p>Web and product design at SumUp, Blippex, and Archify — all in Berlin, Germany. Back home in Portugal I co-founded a design co-working studio called Jungle Collective with 8 other designers, while conducting research at CETAC.MEDIA. Just before that finished my Master’s degree at ITU and ran a workshop at CBS, both in beautiful, cozy Copenhagen.</p>
+        </div>
+      </section>
+
+      <footer class="bottom wrapper">
+        Footer
+      </footer>
+    </main>
 
     <script>
       (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
