Introduce Gulp, SCSS, streamlined grid

--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
     <link rel="icon" type="image/png" href="favicon.png">
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
-    <link rel="stylesheet" href="styles/main.css">
-    <link rel="stylesheet" href="styles/front.css">
+    <link rel="stylesheet" href="styles/index.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Asap:400i,700i|Noticia+Text:400,700,700i|Oswald:300">
 
     <!-- Twitter -->
@@ -67,8 +66,10 @@
       <section class="practice wrapper">
         <h2>Digital product design as an hollistic practice</h2>
         <h3>My take on product design and how I conduct my work</h3>
-        <p>I believe thoughtful product design addresses people, context, and problem as a whole, not as isolated elements. I usually take them in by leveraging user research and data insights early on when kicking off a project.</p>
-        <p>Most of my time is spent asking questions, scribbling diagrams and wireframes, drawing testicles on post-its; often also co-designing and co-programming with other designers and enginners.</p>
+        <div class="copy">
+          <p>I believe thoughtful product design addresses people, context, and problem as a whole, not as isolated elements. I usually take them in by leveraging user research and data insights early on when kicking off a project.</p>
+          <p>Most of my time is spent asking questions, scribbling diagrams and wireframes, drawing testicles on post-its; often also co-designing and co-programming with other designers and enginners.</p>
+        </div>
       </section>
 
       <section class="experience">
