Update copy and column paddings

--- a/index.html
+++ b/index.html
@@ -47,11 +47,13 @@
       <header class="top vcard wrapper" id="hcard-João-Ramos">
         <nav>
           <a href="#" itemprop="name" class="given-name">João Ramos</a>
+          <!--
           <ul role="nav">
             <li>Projects</li>
             <li>Library</li>
             <li>Contact</li>
           </ul>
+        -->
         </nav>
         <div class="about fn n" itemscope itemtype="http://data-vocabulary.org/Person">
           <h1 itemprop="title" class="title"><span class="role">Product and web designer</span> who makes tasks easier for people, through empathy and thoughtful design</h1>
@@ -60,7 +62,7 @@
       </header>
 
       <section class="bio wrapper">
-        <p>I’ve been designing and coding web <em>sites</em> and <em>apps</em> for the past seven years, for start-ups with either self-service or enterprise products. It has been a blast! I’m now doing product design for the authoring experience at Contentful. I’m still learning every single day.</p>
+        <p>I’ve been designing and coding web <em>sites</em> and <em>apps</em> for the past seven years, for start-ups with self-service and enterprise products. It has been a blast! I’m now doing product design for the authoring experience at Contentful. I’m still learning every single day.</p>
       </section>
 
       <section class="practice wrapper">
