--- a/index.html
+++ b/index.html
@@ -91,6 +91,17 @@
       </footer>
     </main>
 
+    <script src="https://unpkg.com/scrollreveal/dist/scrollreveal.min.js"></script>
+
+    <script>
+      window.sr = ScrollReveal({
+        delay: 0,
+        duration: 300,
+        scale: .95
+      });
+      sr.reveal('main > *');
+    </script>
+
     <script>
       (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
       function(){(b[l].q=b[l].q||[]).push(arguments)});b[l].l=+new Date;
