--- a/index.html
+++ b/index.html
@@ -87,7 +87,33 @@
       </section>
 
       <footer class="bottom wrapper">
-        Footer
+        <ul class="social">
+          <li>
+            <a href="http://dribbble.com/joaotiago" rel="me" title="Dribbble shots" target="_blank">
+              <svg width="32" height="32" class="dribbble icon" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"><title>dribbble</title><path d="M16 32C7.178 32 0 24.822 0 16S7.178 0 16 0c8.824 0 16 7.178 16 16s-7.176 16-16 16zm13.494-13.81c-.467-.147-4.23-1.27-8.512-.584 1.787 4.912 2.514 8.913 2.654 9.744a13.685 13.685 0 0 0 5.858-9.16zM21.34 28.6c-.204-1.198-.998-5.377-2.917-10.363l-.09.03c-7.71 2.687-10.475 8.033-10.72 8.535A13.597 13.597 0 0 0 16 29.687c1.894 0 3.7-.387 5.34-1.086zM5.846 25.16c.31-.53 4.06-6.742 11.11-9.02.177-.058.357-.112.537-.163a44.556 44.556 0 0 0-1.108-2.32C9.562 15.702 2.94 15.617 2.34 15.604a13.612 13.612 0 0 0 3.506 9.556zM2.622 13.22c.612.008 6.243.032 12.635-1.666A87.463 87.463 0 0 0 10.19 3.65a13.72 13.72 0 0 0-7.567 9.57zM12.798 2.734a73.12 73.12 0 0 1 5.1 8c4.86-1.82 6.916-4.586 7.162-4.936A13.613 13.613 0 0 0 16 2.354a13.69 13.69 0 0 0-3.202.38zM26.58 7.378c-.29.39-2.58 3.326-7.632 5.39a42.013 42.013 0 0 1 1.2 2.684c4.548-.572 9.065.344 9.517.44a13.612 13.612 0 0 0-3.086-8.514z" fill-rule="evenodd"/></svg>
+            </a>
+          </li>
+          <li>
+            <a href="http://github.com/joaoramos" rel="me" title="Code on GitHub" target="_blank">
+              <svg width="32" height="32" class="github icon" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"><title>github</title><path d="M16 0C7.165 0 0 7.163 0 16c0 8.836 7.165 16 16 16 8.836 0 16-7.164 16-16 0-8.837-7.164-16-16-16zm9.502 25.502a13.4 13.4 0 0 1-5.51 3.333v-2.397c0-1.26-.432-2.188-1.296-2.78.54-.054 1.04-.126 1.492-.22.453-.094.93-.23 1.437-.406.505-.178.958-.39 1.36-.633a5.73 5.73 0 0 0 1.156-.956c.37-.39.68-.834.93-1.328.25-.495.45-1.09.596-1.782.146-.693.22-1.456.22-2.29 0-1.614-.527-2.99-1.58-4.124.48-1.25.428-2.61-.155-4.077l-.39-.047c-.27-.03-.76.083-1.46.344-.705.26-1.494.69-2.37 1.282a14.406 14.406 0 0 0-3.86-.515c-1.342 0-2.623.172-3.842.515a13.4 13.4 0 0 0-1.57-.93c-.496-.245-.89-.412-1.188-.5a4.064 4.064 0 0 0-.83-.164 2.825 2.825 0 0 0-.49-.015.887.887 0 0 0-.158.03c-.584 1.48-.636 2.84-.157 4.08-1.052 1.134-1.578 2.51-1.578 4.124 0 .833.072 1.596.22 2.29.144.692.343 1.286.593 1.78.25.495.56.938.93 1.33.37.39.755.707 1.157.952.4.24.853.452 1.36.63.504.176.983.312 1.437.406.453.094.95.166 1.492.22-.855.582-1.282 1.508-1.282 2.78v2.444a13.392 13.392 0 0 1-5.666-3.38A13.412 13.412 0 0 1 2.564 16 13.396 13.396 0 0 1 6.5 6.498a13.357 13.357 0 0 1 4.272-2.88A13.33 13.33 0 0 1 16 2.563c1.816 0 3.575.354 5.23 1.055 1.6.675 3.037 1.645 4.272 2.88A13.383 13.383 0 0 1 29.438 16a13.398 13.398 0 0 1-3.936 9.502z" fill-rule="evenodd"/></svg>
+            </a>
+          </li>
+          <li>
+            <a href="http://instagram.com/joaoramospt" rel="me" title="Pictures on Instagram" target="_blank">
+              <svg width="32" height="32" class="instagram icon" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"><title>instagram</title><path d="M28 0H4a4 4 0 0 0-4 4v24c0 2.207 1.792 4 4 4h24c2.208 0 4-1.793 4-4V4a4 4 0 0 0-4-4zM16 12c3.685 0 4 4 4 4s.12 4-4 4c-4.116 0-4-4-4-4s.316-4 4-4zm12 14c0 1.106-.893 2-2 2H6c-1.106 0-2-.894-2-2V16a2 2 0 0 1 2-2h2.285C8.117 14.643 8 15.305 8 16a8 8 0 0 0 16 0c0-.695-.118-1.357-.284-2H26c1.107 0 2 .895 2 2v10zm0-18a2 2 0 0 1-2 2h-2a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h2a2 2 0 0 1 2 2v2z" fill-rule="evenodd"/></svg>
+            </a>
+          </li>
+          <li>
+            <a href="http://linkedin.com/in/johnzramos" rel="me" title="My resumé" target="_blank">
+              <svg width="32" height="32" class="linkedin icon" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"><title>linkedin</title><path d="M3.047 0h25.9A3.048 3.048 0 0 1 32 3.047v25.905A3.05 3.05 0 0 1 28.946 32h-25.9A3.046 3.046 0 0 1 0 28.952V3.047A3.045 3.045 0 0 1 3.047 0m2.047 25.938H9.67V12.17H5.094v13.768zm2.03-15.217c1.408 0 2.287-1.026 2.287-2.31C9.39 7.1 8.535 6.1 7.15 6.1c-1.385 0-2.29 1-2.29 2.313 0 1.283.877 2.31 2.236 2.31h.03zm5.523 15.22h4.657v-7.504c0-.404.03-.807.14-1.092.332-.804 1.078-1.636 2.315-1.636 1.64 0 2.144 1.234 2.144 3.042v7.19h4.506v-7.706c0-4.127-2.075-6.434-5.043-6.434-2.435 0-3.5 1.353-4.094 2.265h.03V12.12h-4.657c.06 1.257 0 13.818 0 13.818z" fill-rule="evenodd"/></svg>
+            </a>
+          </li>
+          <li>
+            <a href="http://twitter.com/joaotiago" rel="me" title="Updates on Twitter" target="_blank">
+              <svg width="32" height="32" class="twitter icon" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg"><title>twitter</title><path d="M32 6.08a13.09 13.09 0 0 1-3.77 1.032 6.59 6.59 0 0 0 2.887-3.63 13.17 13.17 0 0 1-4.17 1.59A6.553 6.553 0 0 0 22.157 3a6.566 6.566 0 0 0-6.567 6.565c0 .515.058 1.016.17 1.497a18.644 18.644 0 0 1-13.532-6.86 6.542 6.542 0 0 0-.89 3.3 6.563 6.563 0 0 0 2.92 5.465 6.532 6.532 0 0 1-2.972-.82v.08a6.57 6.57 0 0 0 5.266 6.44 6.618 6.618 0 0 1-2.965.11 6.57 6.57 0 0 0 6.133 4.56 13.173 13.173 0 0 1-8.153 2.81c-.53 0-1.053-.03-1.567-.09a18.584 18.584 0 0 0 10.064 2.95c12.076 0 18.68-10.005 18.68-18.68 0-.286-.006-.568-.02-.85A13.33 13.33 0 0 0 32 6.08" fill-rule="evenodd"/></svg>
+            </a>
+          </li>
+        </ul>
       </footer>
     </main>
 
