Fix markup and microformats validation

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>João, Product designer based in Berlin</title>
-    <meta name="description" content="Product designer at Contentful">
+    <title>João › Product and web designer</title>
+    <meta name="description" content="Product and web designer who makes tasks easier for people, through empathy and thoughtful design">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-site-verification" content="2shu_KfJ0xhCJ4fWUc_Qqf7iPCXsiRnuEYhLqgjzZq8" />
 
@@ -12,39 +12,39 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
     <link rel="stylesheet" href="styles/index.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Asap:400i,700i|Noticia+Text:400,700,700i|Oswald:300">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Asap:400i,700i%7CNoticia+Text:400,700,700i%7COswald:300">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@joaotiago" />
-    <meta name="twitter:title" content="Joao.pt" />
-    <meta name="twitter:description" content="João, Product designer based in Berlin" />
+    <meta name="twitter:title" content="João › Product and web designer" />
+    <meta name="twitter:description" content="Product and web designer who makes tasks easier for people, through empathy and thoughtful design" />
     <meta name="twitter:image" content="http://joao.pt/images/profile.jpg" />
     <meta name="twitter:url" content="http://joao.pt" />
 
     <!-- Open Graph -->
-    <meta property="og:title" content="Joao.pt" />
+    <meta property="og:title" content="João › Product and web designer" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://joao.pt/" />
     <meta property="og:image" content="http://joao.pt/images/profile.jpg" />
-    <meta property="og:description" content="João, Product designer based in Berlin" />
+    <meta property="og:description" content="Product and web designer who makes tasks easier for people, through empathy and thoughtful design" />
 
     <!-- Mobile -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="Joao.pt">
+    <meta name="apple-mobile-web-app-title" content="João › Product and web designer">
     <meta name="mobile-web-app-capable" content="yes">
 
   </head>
-  <body>
+  <body class="vcard" id="hcard-João-Ramos">
 
     <!--[if lt IE 8]>
       <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <main>
+    <main class="about fn n" itemscope itemtype="http://data-vocabulary.org/Person">
 
-      <header class="top vcard wrapper" id="hcard-João-Ramos">
+      <header class="top wrapper">
         <nav>
           <a href="#" itemprop="name" class="given-name">João Ramos</a>
           <!--
@@ -53,24 +53,24 @@
             <li>Library</li>
             <li>Contact</li>
           </ul>
-        -->
+          -->
         </nav>
-        <div class="about fn n" itemscope itemtype="http://data-vocabulary.org/Person">
+        <div class="headline">
           <h1 itemprop="title" class="title"><span class="role">Product and web designer</span> who makes tasks easier for people, through empathy and thoughtful design</h1>
           <img src="http://joao.pt/images/profile.jpg" alt="Photo of João Ramos" itemprop="photo" class="photo" />
         </div>
       </header>
 
       <section class="bio wrapper">
-        <p>I’ve been designing and coding web <em>sites</em> and <em>apps</em> for the past seven years, for start-ups with self-service and enterprise products. It has been a blast! I’m now doing product design for the authoring experience at Contentful. I’m still learning every single day.</p>
+        <h4>I’ve been designing and coding web <em>sites</em> and <em>apps</em> for the past seven years, for start-ups with self-service and enterprise products. It has been a blast! I’m now doing product design for the authoring experience at <a href="http://contentful.com" title="Contentful, Berlin" itemprop="affiliation" class="org" target="_blank">Contentful</a>. I’m still learning every single day.</h4>
       </section>
 
       <section class="practice wrapper">
-        <h2>Digital product design as an hollistic practice</h2>
-        <h3>My take on product design and how I conduct my work</h3>
+        <h2>Product design as an hollistic practice</h2>
+        <span class="description">My take on product design and how I conduct my work</span>
         <div class="copy">
-          <p>I believe thoughtful product design addresses people, context, and problem as a whole, not as isolated elements. I usually take them in by leveraging user research and data insights early on when kicking off a project.</p>
-          <p>Most of my time is spent asking questions, scribbling diagrams and wireframes, drawing testicles on post-its; often also co-designing and co-programming with other designers and enginners.</p>
+          <p>I believe thoughtful product design addresses people, context, and problem as a whole, not as isolated elements. The key is to understand them early on through user research and the <em>right</em> kind of data.</p>
+          <p>Most of my time is spent asking questions, sketching diagrams and wireframes, drawing testicles on post-its, and running ideation exercises. Also design and code in collaboration with other designers and engineers.</p>
         </div>
       </section>
 
@@ -78,7 +78,7 @@
         <div class="currently wrapper">
           <small>Currently</small>
           <p>Contentful, Berlin</p>
-          <p>Product designer</p>
+          <h4>Product designer</h4>
         </div>
         <div class="before wrapper">
           <small>Before</small>
@@ -87,6 +87,10 @@
       </section>
 
       <footer class="bottom wrapper">
+        <div class="copyright">
+          <span>João Ramos © 2007–2017. If you steal, make it better.</span>
+          <span>This website is hosted on Github.</span>
+        </div>
         <ul class="social">
           <li>
             <a href="http://dribbble.com/joaotiago" rel="me" title="Dribbble shots" target="_blank">
