--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
 
       <footer class="bottom wrapper">
         <div class="copyright">
-          <span>João Ramos © 2007–2017. If you steal, make it better.</span>
-          <span>This website is hosted on Github.</span>
+          <span>João Ramos © 2007–2017</span>
+          <span>This website is hosted on Github</span>
         </div>
         <ul class="social">
           <li>
