Update links and font weights

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
     <link rel="stylesheet" href="styles/index.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Asap:400i,700i%7CNoticia+Text:400,700,700i%7COswald:300">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Asap:400i,700i%7CNoticia+Text:400,400i,700%7COswald:300">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary" />
@@ -69,7 +69,7 @@
         <h2>Product design as an hollistic practice</h2>
         <span class="description">My take on product design and how I conduct my work</span>
         <div class="copy">
-          <p>I believe thoughtful product design addresses people, context, and problem as a whole, not as isolated elements. The key is to understand them early on through user research and the <em>right</em> kind of data.</p>
+          <p>I believe thoughtful product design addresses people, context, and problem as a whole. The key is to understand them early on through the <em>right</em> kind of research.</p>
           <p>Most of my time is spent asking questions, sketching diagrams and wireframes, drawing testicles on post-its, and running ideation exercises. Also design and code in collaboration with other designers and engineers.</p>
         </div>
       </section>
