--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
     <link rel="stylesheet" href="styles/index.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Asap:400i,700i%7CNoticia+Text:400,400i,700%7COswald:300">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Asap:400i,700i%7CNoticia+Text:400,400i%7COswald:300">
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary" />
@@ -62,15 +62,15 @@
       </header>
 
       <section class="bio wrapper">
-        <h4>I’ve been designing and coding web <em>sites</em> and <em>apps</em> for the past seven years, for start-ups with self-service and enterprise products. It has been a blast! I’m now doing product design for the authoring experience at <a href="http://contentful.com" title="Contentful, Berlin" itemprop="affiliation" class="org" target="_blank">Contentful</a>. I’m still learning every single day.</h4>
+        <h4>I’ve been designing and coding web <em>sites</em> and <em>apps</em> for the past seven years, for start-ups with self-service and enterprise products. It has been a blast! I’m now doing product design for the authoring experience at <a href="http://contentful.com" title="Contentful GmbH" itemprop="affiliation" class="org" target="_blank">Contentful</a>. I’m still learning every single day.</h4>
       </section>
 
       <section class="practice wrapper">
         <h2>Product design as an hollistic practice</h2>
         <span class="description">My take on product design and how I conduct my work</span>
         <div class="copy">
-          <p>I believe thoughtful product design addresses people, context, and problem as a whole. The key is to understand them early on through the <em>right</em> kind of research.</p>
-          <p>Most of my time is spent asking questions, sketching diagrams and wireframes, drawing testicles on post-its, and running ideation exercises. Also design and code in collaboration with other designers and engineers.</p>
+          <p>I believe thoughtful product design addresses people, context, and value as a whole. The key is to understand them early on through the <em>right</em> kind of research.</p>
+          <p>Most of my time is spent asking questions, sketching diagrams and wireframes, drawing testicles on post-its, and running ideation exercises. I also do a lot of co-designing and co-programming.</p>
         </div>
       </section>
 
@@ -81,8 +81,8 @@
           <h4>Product designer</h4>
         </div>
         <div class="before wrapper">
-          <small>Before</small>
-          <p>Web and product design at SumUp, Blippex, and Archify — all in Berlin, Germany. Back home in Portugal I co-founded a design co-working studio called Jungle Collective with 8 other designers, while conducting research at CETAC.MEDIA. Just before that finished my Master’s degree at ITU and ran a workshop at CBS, both in beautiful, cozy Copenhagen.</p>
+          <small>Previously</small>
+          <p>Designer and developer at <a href="http://sumup.com" title="SumUp GmbH" target="_blank">SumUp</a>, <a href="https://github.com/blippex" title="Blippex" target="_blank">Blippex</a>, <a href="https://www.crunchbase.com/organization/egoarchive" title="Archify" target="_blank">Archify</a>. Back home in Portugal I founded a design co-working studio called Jungle Collective with 8 other designers, while conducting research at <a href="https://www.ua.pt/" title="Universidade de Aveiro" target="_blank">Universidade de Aveiro</a>. Just before that I finished my Master’s degree at <a href="https://www.itu.dk/" tile="IT University of Copenhagen, Denmark" target="_blank">ITU</a> and ran a workshop at <a href="http://www.cbs.dk/en" tile="Copenhagen Business School, Denmark" target="_blank">CBS</a>, both in beautiful, cozy Copenhagen.</p>
         </div>
       </section>
 
