--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
       <footer class="bottom wrapper">
         <div class="copyright">
           <span>João Ramos © 2007–2017</span>
-          <span>This website is hosted on <a href="http://github.com/joaoramos/joaoramos.github.io" rel="me" title="GitHub" onclick="ga('send', 'event', 'social', 'GitHub Pages');" target="_blank"></span>
+          <span>This website is hosted on <a href="http://github.com/joaoramos/joaoramos.github.io" rel="me" title="Repository on GitHub" onclick="ga('send', 'event', 'social', 'GitHub Pages');" target="_blank">GitHub</a></span>
         </div>
         <ul class="social">
           <li>
