Update typefaces to DIN and Acta

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <link rel="apple-touch-icon" href="apple-touch-icon.png">
 
     <link rel="stylesheet" href="styles/index.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Asap:400i,700i%7CNoticia+Text:400,400i%7COswald:300">
+    <script src="https://use.typekit.net/kbv1tff.js"></script>
+    <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary" />
