--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
         <h2>Product design as an hollistic practice</h2>
         <span class="description">My take on product design and how I conduct my work</span>
         <div class="copy">
-          <p>I believe thoughtful product design addresses people, context, and value as a whole. The key is to understand them early on through the <em>right</em> kind of research.</p>
-          <p>Most of my time is spent asking questions, sketching diagrams and wireframes, drawing testicles on post-its, and running ideation exercises. I also do a lot of co-designing and co-programming.</p>
+          <p>I believe thoughtful product design addresses people, problem, and context as a whole. The key is to explore them early on through the <em>right</em> kind of research.</p>
+          <p>Most of my time is spent asking questions and talking to customers, bouncing sketches and diagrams, drawing testicles on post-its, and running ideation exercises.</p>
         </div>
       </section>
 
@@ -83,13 +83,13 @@
         </div>
         <div class="before wrapper">
           <small>Previously</small>
-          <p>Designer and developer at <a href="http://sumup.com" title="SumUp GmbH" target="_blank">SumUp</a>, <a href="https://github.com/blippex" title="Blippex" target="_blank">Blippex</a>, <a href="https://www.crunchbase.com/organization/egoarchive" title="Archify" target="_blank">Archify</a>. Back home in Portugal I founded a design co-working studio called Jungle Collective with 8 other designers, while conducting research at <a href="https://www.ua.pt/" title="Universidade de Aveiro" target="_blank">Universidade de Aveiro</a>. Just before that I finished my Master’s degree at <a href="https://www.itu.dk/" tile="IT University of Copenhagen, Denmark" target="_blank">ITU</a> and ran a workshop at <a href="http://www.cbs.dk/en" tile="Copenhagen Business School, Denmark" target="_blank">CBS</a>, both in beautiful, cozy Copenhagen.</p>
+          <p>Designer and developer at <a href="http://sumup.com" title="SumUp GmbH" target="_blank">SumUp</a>, <a href="https://github.com/blippex" title="Blippex" target="_blank">Blippex</a>, <a href="https://www.crunchbase.com/organization/egoarchive" title="Archify" target="_blank">Archify</a>. Back home in Portugal I co-founded a design studio called Jungle Collective with 8 other designers, while conducting research at <a href="https://www.ua.pt/" title="Universidade de Aveiro" target="_blank">Universidade de Aveiro</a>, where I also finished my studies. I wrote my Master’s thesis about visualization as a tool for decision-making at <a href="https://www.itu.dk/" tile="IT University of Copenhagen, Denmark" target="_blank">ITU</a> and ran a practical course at <a href="http://www.cbs.dk/en" tile="Copenhagen Business School, Denmark" target="_blank">CBS</a>, both in beautiful, cozy Copenhagen.</p>
         </div>
       </section>
 
       <footer class="bottom wrapper">
         <div class="copyright">
-          <span>João Ramos © 2007–2017</span>
+          <span>João Ramos © 2007–2018</span>
           <span>This website is hosted on <a href="http://github.com/joaoramos/joaoramos.github.io" rel="me" title="Repository on GitHub" onclick="ga('send', 'event', 'social', 'GitHub Pages');" target="_blank">GitHub</a></span>
         </div>
         <ul class="social">
