Update title, fix typo

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>João › Product and web designer</title>
-    <meta name="description" content="Product and web designer who makes tasks easier for people, through empathy and thoughtful design">
+    <title>João - Product designer</title>
+    <meta name="description" content="Product designer who makes tasks easier for people, through empathy and thoughtful design">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="google-site-verification" content="2shu_KfJ0xhCJ4fWUc_Qqf7iPCXsiRnuEYhLqgjzZq8" />
 
@@ -18,22 +18,22 @@
     <!-- Twitter -->
     <meta name="twitter:card" content="summary" />
     <meta name="twitter:site" content="@joaotiago" />
-    <meta name="twitter:title" content="João › Product and web designer" />
-    <meta name="twitter:description" content="Product and web designer who makes tasks easier for people, through empathy and thoughtful design" />
+    <meta name="twitter:title" content="João › Product designer" />
+    <meta name="twitter:description" content="Product designer who makes tasks easier for people, through empathy and thoughtful design" />
     <meta name="twitter:image" content="http://joao.pt/images/profile.jpg" />
     <meta name="twitter:url" content="http://joao.pt" />
 
     <!-- Open Graph -->
-    <meta property="og:title" content="João › Product and web designer" />
+    <meta property="og:title" content="João › Product designer" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="http://joao.pt/" />
     <meta property="og:image" content="http://joao.pt/images/profile.jpg" />
-    <meta property="og:description" content="Product and web designer who makes tasks easier for people, through empathy and thoughtful design" />
+    <meta property="og:description" content="Product designer who makes tasks easier for people, through empathy and thoughtful design" />
 
     <!-- Mobile -->
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <meta name="apple-mobile-web-app-title" content="João › Product and web designer">
+    <meta name="apple-mobile-web-app-title" content="João › Product designer">
     <meta name="mobile-web-app-capable" content="yes">
 
   </head>
@@ -57,7 +57,7 @@
           -->
         </nav>
         <div class="headline">
-          <h1 itemprop="title" class="title"><span class="role">Product and web designer</span> who makes tasks easier for people, through empathy and thoughtful design</h1>
+          <h1 itemprop="title" class="title"><span class="role">Product designer</span> who makes tasks easier for people, through empathy and thoughtful design</h1>
           <img src="http://joao.pt/images/profile.jpg" alt="Photo of João Ramos" itemprop="photo" class="photo" />
         </div>
       </header>
@@ -67,8 +67,8 @@
       </section>
 
       <section class="practice wrapper">
-        <h2>Product design as an hollistic practice</h2>
-        <span class="description">My take on product design and how I conduct my work</span>
+        <h2>Product design as an holistic practice</h2>
+        <span class="description">My ethos and working style on product design</span>
         <div class="copy">
           <p>I believe thoughtful product design addresses people, problem, and context as a whole. The key is to explore them early on through the <em>right</em> kind of research.</p>
           <p>Most of my time is spent asking questions and talking to customers, bouncing sketches and diagrams, drawing testicles on post-its, and running ideation exercises.</p>
